# LangChain-Course

./: .gitignore  ingestion.py  main.py  mediumblog1.txt  nodes.py  prompt.py  pyproject.toml  react.py
.chroma/f004717b-5739-44d2-b710-2508e94dc117/: index_metadata.pickle
faiss_index_react/: index.faiss  index.pkl
graph/: consts.py  graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  retrieve.py  web_search.py
